--- a/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
@@ -243,9 +243,10 @@
             </div>
         </footer>
 
-        <!-- JavaScript Libraries -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/error-handler.js" asp-append-version="true"></script>
+    <!-- JavaScript Libraries -->
+    <script src="~/lib/jquery-validation/dist/jquery-3.6.0.min.js"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/error-handler.js" asp-append-version="true"></script>
 
         <!-- تطبيق JavaScript مخصص - Custom JavaScript -->
         <script>
