--- a/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
@@ -229,11 +229,11 @@
                     <div class="col-md-6 text-end">
                         <p class="mb-0">
                             <i class="fas fa-envelope me-2"></i>
-                            library@university.edu
+                        bahaa.ebraheem812@gmail.com
                         </p>
                         <p class="mb-0">
                             <i class="fas fa-phone me-2"></i>
-                            +966-11-1234567
+                        +963991640012
                         </p>
                     </div>
                 </div>
