--- a/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
+++ b/LibraryManagementSystem.UI/Pages/Shared/_Layout.cshtml
@@ -240,7 +240,7 @@
                 <hr class="my-3">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <p class="mb-0">&copy; @DateTime.Now.Year جميع الحقوق محفوظة - نظام إدارة المكتبة</p>
+                    <p class="mb-0">&copy; @DateTime.Now.Year جميع الحقوق محفوظة - Bahaa Ebraheem</p>
                     </div>
                 </div>
             </div>
